# BIOS

./: .gitignore  3BarTruss.abaqus.inp  3BarTruss.abaqus.txt  3BarTruss.diana.dcf  3BarTruss.diana.tb  3BarTruss.fast.pos  CMakeLists.txt  README.md  TenBarTrussDIANA.dcf  TenBarTrussFrequencyDIANA.dcf  TenBarTrussFrequencyDIANA.out  TenBarTrussFrequencyDIANA.tb  ThreeBarTrussABAQUS.txt  ThreeBarTrussDIANA.dcf  ThreeBarTrussDIANA.tb  ThreeBarTrussFAST.pos  index.html  makefile  mpi_hosts  readme.txt  runBIOS.sh  runall.py  teste.opt
DataFiles/abaqus/: ThreeBarTrussABAQUS.inp  ThreeBarTrussABAQUS.py  ThreeBarTrussABAQUS.txt
DataFiles/diana/: TenBarTrussFrequencyDIANA.dcf  ThreeBarTrussDIANA.dcf  ThreeBarTrussDIANA.tb
DataFiles/fast/: datbegShellHoleTridir.txt  (+1 more)
ctrl/: algparam.h  lamalg.cpp  lamalg.h  lamga.cpp  lamga.h  modlamnsgaII.cpp  modlamnsgaII.h  modnsgaII.cpp  modnsgaII.h  modpso.cpp  modpso.h  optalg.h  rs.cpp  rs.h  sel.cpp  sel.h  stdabc.cpp  stdabc.h  stdais.cpp  stdais.h  stdde.cpp  stdde.h  stdga.cpp  stdga.h  stdpso.cpp  stdpso.h
main/: gbldef.h  gblvar.h  input.h  utl.cpp  utl.h
mlib/: mat.cpp  mat.h  matvec.cpp  matvec.h  sysmat.cpp  sysmat.h  vec.cpp  vec.h
pen/: penalty.cpp  penalty.h
prob/: benchmark.cpp  benchmark.h  lam.cpp  lam.h  lamplt.h  metaopt.cpp  metaopt.h  metaprob.cpp  metaprob.h  problem.cpp  problem.h  probsurr.cpp  probsurr.h
sol/: food.cpp  food.h  group.cpp  group.h  individual.cpp  individual.h  optsolution.cpp  optsolution.h  particle.cpp  particle.h  sampsao.cpp  sampsao.h
sur/: rbf.cpp  rbf.h  surr.cpp  surr.h
(+174 files in other folders)
